# projects-2024

./: CMakeLists.txt
Lab0/: Lab0.cpp
Lab2/main/: main.sln
Lab2/main/main/: main.cpp  main.vcxproj
Lab5(2)/lab5/: FileName.cpp  lab5.sln  lab5.vcxproj
Lab5(2)/lab5/x64/Debug/: lab5.exe.recipe  lab5.ilk  lab5.vcxproj.FileListAbsolute.txt  vc143.idb
Lab5/Project1/: Project1.sln  Project1.vcxproj  main.cpp
Lab5/Project1/x64/Debug/: Lab5.exe.recipe  Lab5.ilk  Project1.vcxproj.FileListAbsolute.txt  vc143.idb
Lab6/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  l6v2.cpp  oval.h  point.h  shape.h  square.h
Lab6/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  vc143.idb
Project3/: CMakeLists.txt
Project3/inc/: func.hpp
Project3_git/: readme.txt
Project3_git/Project3/: CMakeLists.txt  Project3.cpp  Project3.h
Project3_git/Project3/src/: func.cpp
SFML2/: ALL_BUILD.vcxproj  CMakeCache.txt  cmake_install.cmake  sfml_sample.vcxproj  sfml_sample.vcxproj.filters
SFML2/sfml_sample.dir/Debug/: sfml_sample.exe.recipe
SFML2/sfml_sample.dir/Debug/sfml_sample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.read.1.tlog
SFML2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
lab3-SFML/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sfml_sample.sln  sfml_sample.vcxproj  sfml_sample.vcxproj.filters
lab3-SFML/sfml_sample.dir/Debug/: sfml_sample.exe.recipe
lab3-SFML/sfml_sample.dir/Debug/sfml_sample.tlog/: CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  (+4 more)
lect14/main/: main.sln
lect14/main/main/: main.cpp  main.vcxproj
(+53 files in other folders)
